wip refactor Verify